--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
 			<h2>(4 Week Training)</h2>
         </header>
 		<nav>
-			<a href="https://Amanjot-singh-17.github.io/Amanjot-singh-17/App.js"><button type="button" class="btn btn-info">Day 1</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<a href="https://amanjot-singh-17.github.io/Javascript-and-React-Js-Training-/
+App.js"><button type="button" class="btn btn-info">Day 1</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			<a href="https://AmanpreetKaur-123.github.io/Amanpreet-kaur/11th June.pdf"><button type="button" class="btn btn-info">Day 2</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			<a href="https://AmanpreetKaur-123.github.io/Amanpreet-kaur/12th June.html.pdf"><button type="button" class="btn btn-info">Day 3</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			<a href="https://AmanpreetKaur-123.github.io/Amanpreet-kaur/13th June.html.pdf"><button type="button" class="btn btn-info">Day 4</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
