--- a/index.html
+++ b/index.html
@@ -67,18 +67,18 @@
 			<h2>(4 Week Training)</h2>
         </header>
 		<nav>
-			<a href="App.js"><button type="button" class="btn btn-info">Day 1</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			<a href="https://AmanpreetKaur-123.github.io/Amanpreet-kaur/11th June.pdf"><button type="button" class="btn btn-info">Day 2</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			<a href="https://AmanpreetKaur-123.github.io/Amanpreet-kaur/12th June.html.pdf"><button type="button" class="btn btn-info">Day 3</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			<a href="https://AmanpreetKaur-123.github.io/Amanpreet-kaur/13th June.html.pdf"><button type="button" class="btn btn-info">Day 4</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			<a href="https://AmanpreetKaur-123.github.io/Amanpreet-kaur/14th June.html.pdf"><button type="button" class="btn btn-info">Day 5</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;    
-			<a href="https://AmanpreetKaur-123.github.io/Amanpreet-kaur/15th June.html.pdf"><button type="button" class="btn btn-info">Day 6</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			<a href="https://AmanpreetKaur-123.github.io/Amanpreet-kaur/17th June.html.pdf"><button type="button" class="btn btn-info">Day 7</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			<a href="https://AmanpreetKaur-123.github.io/Amanpreet-kaur/18th June.html.pdf"><button type="button" class="btn btn-info">Day 8</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			<a href="https://AmanpreetKaur-123.github.io/Amanpreet-kaur/19th June.html.pdf"><button type="button" class="btn btn-info">Day 9</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			<a href="https://AmanpreetKaur-123.github.io/Amanpreet-kaur/20th June.html.pdf"><button type="button" class="btn btn-info">Day 10</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			<div class="main"><a href="https://AmanpreetKaur-123.github.io/Amanpreet-kaur/21th June.html.pdf"><button type="button" class="btn btn-info">Day 11</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			<a href="https://AmanpreetKaur-123.github.io/Amanpreet-kaur/24th June.js.pdf"><button type="button" class="btn btn-info">Day 12</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<a href="day1.js"><button type="button" class="btn btn-info">Day 1</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<a href="day2.js"><button type="button" class="btn btn-info">Day 2</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<a href="day3.js"><button type="button" class="btn btn-info">Day 3</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<a href="day4.js"><button type="button" class="btn btn-info">Day 4</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<a href="day5.js"><button type="button" class="btn btn-info">Day 5</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;    
+			<a href="day6.js"><button type="button" class="btn btn-info">Day 6</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<a href="day7.html"><button type="button" class="btn btn-info">Day 7</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<a href="day8.html"><button type="button" class="btn btn-info">Day 8</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<a href=""><button type="button" class="btn btn-info">Day 9</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<a href="day10.html"><button type="button" class="btn btn-info">Day 10</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<div class="main"><a href="app.js"><button type="button" class="btn btn-info">Day 11</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<a href=""><button type="button" class="btn btn-info">Day 12</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			<a href="https://AmanpreetKaur-123.github.io/Amanpreet-kaur/25th June.js.pdf"><button type="button" class="btn btn-info">Day 13</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			<a href="https://AmanpreetKaur-123.github.io/Amanpreet-kaur/26th June.js.pdf"><button type="button" class="btn btn-info">Day 14</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			<a href="https://AmanpreetKaur-123.github.io/Amanpreet-kaur/27th June.js.pdf"><button type="button" class="btn btn-info">Day 15</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
