--- a/index.html
+++ b/index.html
@@ -67,24 +67,24 @@
 			<h2>(4 Week Training)</h2>
         </header>
 		<nav>
-			<a href="day1.js"><button type="button" class="btn btn-info">Day 1</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			<a href="day2.js"><button type="button" class="btn btn-info">Day 2</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			<a href="day3.js"><button type="button" class="btn btn-info">Day 3</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			<a href="day4.js"><button type="button" class="btn btn-info">Day 4</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			<a href="day5.js"><button type="button" class="btn btn-info">Day 5</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;    
-			<a href="day6.js"><button type="button" class="btn btn-info">Day 6</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			<a href="day7.html"><button type="button" class="btn btn-info">Day 7</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			<a href="day8.html"><button type="button" class="btn btn-info">Day 8</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			<a href=""><button type="button" class="btn btn-info">Day 9</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			<a href="day10.html"><button type="button" class="btn btn-info">Day 10</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			<div class="main"><a href="app.js"><button type="button" class="btn btn-info">Day 11</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			<a href=""><button type="button" class="btn btn-info">Day 12</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			<a href="https://AmanpreetKaur-123.github.io/Amanpreet-kaur/25th June.js.pdf"><button type="button" class="btn btn-info">Day 13</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			<a href="https://AmanpreetKaur-123.github.io/Amanpreet-kaur/26th June.js.pdf"><button type="button" class="btn btn-info">Day 14</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			<a href="https://AmanpreetKaur-123.github.io/Amanpreet-kaur/27th June.js.pdf"><button type="button" class="btn btn-info">Day 15</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			<a href="https://AmanpreetKaur-123.github.io/Amanpreet-kaur/28th June.html.pdf"><button type="button" class="btn btn-info">Day 16</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			<a href="https://AmanpreetKaur-123.github.io/Amanpreet-kaur/1st July.pdf"><button type="button" class="btn btn-info">Day 17</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-			<a href="https://AmanpreetKaur-123.github.io/Amanpreet-kaur/2nd July.js.pdf"><button type="button" class="btn btn-info">Day 18</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<a href="https://github.com/Amanjot-singh-17/Javascript-and-React-Js-Training-/blob/main/day1.js"><button type="button" class="btn btn-info">Day 1</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<a href="https://github.com/Amanjot-singh-17/Javascript-and-React-Js-Training-/blob/main/day2.js"><button type="button" class="btn btn-info">Day 2</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<a href="https://github.com/Amanjot-singh-17/Javascript-and-React-Js-Training-/blob/main/day3js"><button type="button" class="btn btn-info">Day 3</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<a href="https://github.com/Amanjot-singh-17/Javascript-and-React-Js-Training-/blob/main/day4.js"><button type="button" class="btn btn-info">Day 4</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<a href="https://github.com/Amanjot-singh-17/Javascript-and-React-Js-Training-/blob/main/day5.js"><button type="button" class="btn btn-info">Day 5</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;    
+			<a href="https://github.com/Amanjot-singh-17/Javascript-and-React-Js-Training-/blob/main/day6.js"><button type="button" class="btn btn-info">Day 6</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<a href="https://github.com/Amanjot-singh-17/Javascript-and-React-Js-Training-/blob/main/day7.html"><button type="button" class="btn btn-info">Day 7</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<a href="https://github.com/Amanjot-singh-17/Javascript-and-React-Js-Training-/blob/main/day8.html"><button type="button" class="btn btn-info">Day 8</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<a href="https://github.com/Amanjot-singh-17/Javascript-and-React-Js-Training-/tree/main/day9"><button type="button" class="btn btn-info">Day 9</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<a href="https://github.com/Amanjot-singh-17/Javascript-and-React-Js-Training-/blob/main/day10.html"><button type="button" class="btn btn-info">Day 10</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<div class="main"><a href="https://github.com/Amanjot-singh-17/Javascript-and-React-Js-Training-/blob/main/app.js"><button type="button" class="btn btn-info">Day 11</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<a href="https://github.com/Amanjot-singh-17/Javascript-and-React-Js-Training-/tree/main/components%20day12"><button type="button" class="btn btn-info">Day 12</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<a href="https://github.com/Amanjot-singh-17/Javascript-and-React-Js-Training-/tree/main/components%20day13"><button type="button" class="btn btn-info">Day 13</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<a href="https://github.com/Amanjot-singh-17/Javascript-and-React-Js-Training-/blob/main/day14.js"><button type="button" class="btn btn-info">Day 14</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<a href="https://github.com/Amanjot-singh-17/Javascript-and-React-Js-Training-/tree/main/components%20day15"><button type="button" class="btn btn-info">Day 15</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<a href="https://github.com/Amanjot-singh-17/Javascript-and-React-Js-Training-/blob/main/appday16.js"><button type="button" class="btn btn-info">Day 16</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<a href="https://github.com/Amanjot-singh-17/Javascript-and-React-Js-Training-/blob/main/appday17.js"><button type="button" class="btn btn-info">Day 17</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<a href="https://github.com/Amanjot-singh-17/Javascript-and-React-Js-Training-/blob/main/appday18.js"><button type="button" class="btn btn-info">Day 18</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			<a href="https://AmanpreetKaur-123.github.io/Amanpreet-kaur/3rd July.js.pdf"><button type="button" class="btn btn-info">Day 19</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			<a href="https://AmanpreetKaur-123.github.io/Amanpreet-kaur/5th July.js.pdf"><button type="button" class="btn btn-info">Day 20</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			</div>
